--- a/RLearnHaskell.cabal
+++ b/RLearnHaskell.cabal
@@ -15,7 +15,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  -- exposed-modules:     
+  exposed-modules:		QLearn     
   -- other-modules:       
-  build-depends:       base ==4.6.*
+  build-depends:       base ==4.6.*, containers
   hs-source-dirs:      src
