--- a/RLearnHaskell.cabal
+++ b/RLearnHaskell.cabal
@@ -15,7 +15,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:		QLearn     
+  exposed-modules:     Game, Learner, Table
   -- other-modules:       
-  build-depends:       base ==4.6.*, containers
-  hs-source-dirs:      src
+  build-depends:       base ==4.6.*, containers, random
+  hs-source-dirs:      src, src/Learn
